<resources>
    <string name="app_name">UpTodo</string>
    <string name="bottom_nav_title_index">Index</string>
    <string name="bottom_nav_title_calendar">Calendar\n</string>
    <string name="bottom_nav_title_focus">Focus</string>
    <string name="bottom_nav_title_profile">Profile\n\n</string>

    <string name="title_settings">Settings</string>
    <string name="title_edit_task_title">Edit Task title</string>

    <string name="change_app_color">Change app color</string>
    <string name="change_app_typography">Change app typography</string>
    <string name="change_app_language">Change app language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search for your task...</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_empty_list_index">What do you want to do today?</string>
    <string name="add_task">Tap + to add your tasks</string>
    <string name="home_bottom_sheet_title">Add Task</string>
    <string name="priority_dialog_title">Task Priority</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="english">English</string>
    <string name="uzbek">Uzbek</string>
    <string name="russian">Russian</string>
</resources>