<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/indexFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_title_index"
        app:showAsAction="never"/>

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/bottom_nav_title_calendar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_add"
        android:title=""
        app:showAsAction="never"/>
    <item
        android:id="@+id/focusFragment"
        android:icon="@drawable/ic_clock"
        android:title="@string/bottom_nav_title_focus"
        app:showAsAction="never"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/bottom_nav_title_profile"
        app:showAsAction="never"/>

</menu>