<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screenStyle"
    android:orientation="vertical"
    tools:context=".ui.screens.settings.SettingsFragment">

    <FrameLayout style="@style/toolbarStyle">

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/imageButtonStyle"
            android:src="@drawable/ic_arrow_left"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textStyle.toolbar"
            android:text="@string/title_settings" />
    </FrameLayout>

    <TextView
        style="@style/textStyle.title"
        android:text="@string/title_settings" />

    <LinearLayout
        android:id="@+id/ll_change_color"
        style="@style/settingsItemStyle"
        android:layout_marginTop="4dp">

        <ImageView
            style="@style/imageStyle"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_brush" />

        <TextView
            style="@style/textStyle"
            android:layout_marginStart="10dp"
            android:text="@string/change_app_color" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/ic_arrow_right"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_typography"
        style="@style/settingsItemStyle">

        <ImageView
            style="@style/imageStyle"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_text" />

        <TextView
            style="@style/textStyle"
            android:layout_marginStart="10dp"
            android:text="@string/change_app_typography" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/ic_arrow_right"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_language"
        style="@style/settingsItemStyle">

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/ic_language"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textStyle"
            android:layout_marginStart="10dp"
            android:text="@string/change_app_language" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            style="@style/imageStyle"
            android:src="@drawable/ic_arrow_right"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>